--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,5 +26,6 @@
     "editor.tabSize": 4,
     "files.encoding": "utf8bom",
     "files.insertFinalNewline": true
-  }
+  },
+  "azureAutomation.directory.basePath": "c:\\Users\\ahmed"
 }
